# luebz-liefert-backend

./: .env  .gitignore  Cargo.toml  README.md  clearOldTokens.php  current.php  index.php  sub.html  sw.js  test.php
.github/workflows/: build.yaml
MailTemplates/: email-verification.php  neues-unternehmen-user.php  neues-unternehmen.php
migrations/2021-03-09-184321_create_members/: down.sql  up.sql
src/: graphql_schema.rs  main.rs  schema.rs
src/graphql_schema/: category.rs  company.rs  mod.rs  news.rs  post.rs  subscription.rs  user.rs
